update: removed serviceworker - no need

--- a/frontend/configs/tsconfig.json
+++ b/frontend/configs/tsconfig.json
@@ -32,8 +32,7 @@
       "@assets/*": [ "./assets/*" ],
       "@components/*": [ "./components/*" ],
       "@data/*": [ "./data/*" ],
-      "@modules/*": [ "./modules/*" ],
-      "@serviceworker/*": [ "./serviceworker/*" ]
+      "@modules/*": [ "./modules/*" ]
     },
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
