--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
+    "@mdi/js": "^5.9.55",
     "@types/mini-css-extract-plugin": "^1.2.3",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
