--- a/frontend/configs/tsconfig.json
+++ b/frontend/configs/tsconfig.json
@@ -45,7 +45,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
 
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   }
 }
