--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "babel-loader": "^8.2.2",
+    "clean-terminal-webpack-plugin": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
     "html-webpack-plugin": "^5.3.1",
