--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "./configs/tsconfig.json",
   "compilerOptions": {
     "noEmit": true
-  }
+  },
+  "exclude": [ "node_modules", "production", "configs" ]
 }
